vbnc/vbnc/tests/Errors/30182.vb
Imports Hashtable = System.Collections

Class C
    Dim ht As Hashtable
End Class